# hellomouse-apps-api

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.txt  config.toml.example  container-compose.yml
src/: lib.rs  main.rs  main.rs.disabled  user.rs
src/app/: mod.rs
src/board/: app.rs  mod.rs
src/board/handlers/: debug_handler.rs  mod.rs  postgres_handler.rs
src/board/types/: board.rs  mod.rs  pin.rs
src/board/util/: handler.rs
src/files/: app.rs  mod.rs  postgres_handler.rs
src/link/: app.rs  types.rs
src/link/handlers/: postgres_handler.rs
src/music/: app.rs  mod.rs  types.rs
src/music/handlers/: mod.rs  postgres_handler.rs
src/shared/: app.rs  mod.rs
src/shared/handlers/: postgres_handler.rs
src/shared/types/: account.rs  app.rs  mod.rs
src/shared/util/: clean_html.rs  config.rs  handler.rs  mod.rs  secret.rs
src/site/: app.rs  mod.rs
src/site/handlers/: mod.rs  web_handler.rs
src/site/types/: status.rs
tests/: test_boards.py  test_login.py  test_pins.py  test_users.py  users.rs
