[package]
name = "hellomouse_board_server"
version = "0.1.0"
edition = "2021"

linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.2"
actix-session = { version="0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
bitflags = { version="2.3.3", features = ["serde"] }
cached = "0.44.0"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
json_value_merge = "1.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0.136"
sqlx = { version = "0.7", features = [ "runtime-async-std", "postgres", "chrono", "uuid" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
libpasta = "0.1.2"
num-derive = "0.4.0"
num = "0.4.1"
num-traits = "0.2.16"
actix-extensible-rate-limit = "0.2.1"
actix-cors = "0.6.4"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
